# K-MoneyBall

./: .env  .gitignore  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml  run.sh
airflow/: Dockerfile  airflow.cfg  airflow.db  requirements.txt
airflow/dags/: club_profile_dag.py  dags_config.py  scrap_transfermarkt_dag.py
airflow/dags/custom_operators/: __init__.py  club_profile_opertaor.py  player_profile_operator.py  scrap_club_profile_opertaor.py  scrap_player_profile_operator.py
airflow/modules/club/: __init__.py  club_profile_exporter.py  (+2 more)
connect/: Dockerfile
connect/connectors/: clubs_mongo_sink.json  clubs_mongo_source.json  event_mongo_sink.json  mongo_event_sink.json  mongo_event_source.json  players_mongo_sink.json  players_mongo_source.json  register_connectors.sh  simple_sink.json  simple_source.json  stats_mongo_sink.json  stats_mongo_source.json
k_moneyball/: Dockerfile  main.py  pyproject.toml  run.sh
k_moneyball/crawlers/: club_profile.py  club_profile_crawler.py  configs.py  players_profile_crawler.py  user_profile.py
k_moneyball/data/: config.py  init_db.py  init_mongodb.py
k_moneyball/listener/: kafka_listener.py
k_moneyball/modules/club/: club_profile_exporter.py  club_profile_producer.py  club_profile_vaildator.py
k_moneyball/modules/player/: players_profile_crawler.py
k_moneyball/modules/util/: __init__.py
kafka_listener/: Dockerfile  pyproject.toml  run.sh
kafka_listener/kafka_listener/: kafka_listener.py  postgresql_connector.py
mongo/: init.sh
postgres_kmoneyball/: init.sql
zeppelin/: Dockerfile
zeppelin/conf/: zeppelin-env.sh
zeppelin/interpreter/: interpreter.json
(+13 files in other folders)
