[tool.poetry]
name = "k-moneyball"
version = "0.1.0"
description = ""
authors = ["MoonSeoJun <msj00130@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"
psycopg2-binary = "^2.9.9"
pymongo = "^4.5.0"
connexion = "^2.14.2"
fastapi = "^0.104.1"
python-multipart = "^0.0.6"
pandas = "^2.1.4"
kafka-python = "^2.0.2"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true