[tool.poetry]
name = "kafka-listener"
version = "0.1.0"
description = ""
authors = ["MoonSeoJun <msj00130@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
kafka-python = "^2.0.2"
psycopg = {extras = ["binary"], version = "^3.1.14"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
